# clinews

./: .gitignore  README.md
cli/: Cargo.toml
cli/src/: main.rs  theme.rs
headlines/: Cargo.toml
headlines/src/: headlines.rs  lib.rs  main.rs
newsapi/: Cargo.toml
newsapi/src/: lib.rs
