[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
crossterm = "0.23.2"
dotenv = "0.15.0"
newsapi = { path = "../newsapi", features = ["async"] }
termimad = "0.20.2"
tokio = { version = "1.19.2", features = ["full"] }
